elasticsearch.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    name: elasticsearch
  namespace: logging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: elasticsearch
    spec:
      containers:
       - image: elasticsearch
         name: elasticsearch
         ports:
          - name: elasticsearch
            containerPort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    name: elasticsearch
  namespace: logging
spec:
  ports:
  - port: 9200
    targetPort: 9200
  selector:
    name: elasticsearch
