kibana.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana
  labels:
    name: kibana
  namespace: logging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: kibana
    spec:
      containers:
       - image: kibana
         name: kibana
         ports:
          - name: kibana
            containerPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    name: kibana
  namespace: logging
spec:
  ports:
  - port: 5601
    targetPort: 5601
  selector:
    name: kibana
