kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
#    nginx.ingress.kubernetes.io/auth-type: basic
#    nginx.ingress.kubernetes.io/auth-secret: kibana-basic-auth
#    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  tls:
  - hosts:
    - your.kibana.fqdn
    secretName: your-kibana-fqdn-tls
  rules:
  - host: your.kibana.fqdn
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
